--- a/.github/workflows/workflow-command.yaml
+++ b/.github/workflows/workflow-command.yaml
@@ -8,3 +8,11 @@ jobs:
         steps:
             - name: setting an error message
               run: echo "::error::Missing semicolon"
+            - name: setting an error message with params
+              run: echo "::error title=Error title,file=app.js,line=2,endLine=3,col=5,endColumn=7::Missing Semicolon"   
+            - name: setting an debug message with params
+              run: echo "::debug title=Debug title,file=app.js,line=2,endLine=3,col=5,endColumn=7::Missing Semicolon"  
+            - name: setting an warning message with params
+              run: echo "::warning title=Warning title,file=app.js,line=2,endLine=3,col=5,endColumn=7::Missing Semicolon"  
+            - name: setting an notice message with params
+              run: echo "::notice title=Notice title,file=app.js,line=2,endLine=3,col=5,endColumn=7::Missing Semicolon"  
