--- a/.github/workflows/workflow-command.yaml
+++ b/.github/workflows/workflow-command.yaml
@@ -16,3 +16,12 @@ jobs:
               run: echo "::warning title=Warning title,file=app.js,line=2,endLine=3,col=5,endColumn=7::Missing Semicolon"  
             - name: setting an notice message with params
               run: echo "::notice title=Notice title,file=app.js,line=2,endLine=3,col=5,endColumn=7::Missing Semicolon"  
+            - name: Group of logs
+              run: |
+                echo "::group::My group title"
+                echo "Inside group"
+                echo "::endgroup::"
+            - name: Masking value
+              run: echo "::add-mask::Secret string"
+            - name: Echo secret 
+              run: echo "Secret string"    
