--- a/.github/workflows/working-dire-and-shell.yaml
+++ b/.github/workflows/working-dire-and-shell.yaml
@@ -18,8 +18,8 @@ jobs:
      steps:
       - name: Display working Directory and List files
         run: |
-            pwd
-            ls -la
-            echo $GITHUB_SHA
-            echo $GITHUB_REPOSITORY
-            echo $GITHUB_WORKSPACE      
+            Get-Location
+            dir
+            echo $env:GITHUB_SHA
+            echo $env:GITHUB_REPOSITORY
+            echo $env:GITHUB_WORKSPACE      
