defaults-shell-bash

--- a/.github/workflows/working-dire-and-shell.yaml
+++ b/.github/workflows/working-dire-and-shell.yaml
@@ -2,6 +2,10 @@ name: Working dire and shell
 
 on: [push]
 
+defaults:
+    run:
+      shell: bash  
+
 jobs:
    display-wd-display:
      runs-on: ubuntu-latest
