--- a/.github/workflows/pr-comment.yaml
+++ b/.github/workflows/pr-comment.yaml
@@ -8,7 +8,7 @@ jobs:
         runs-on: ubuntu-latest
         steps:
             - name: commeent on new pr
-              uses: actions/github-scripts@v6
+              uses: actions/github-script@v7
               with:
                 script: |
                   github.rest.issues.createComment({
