--- a/.github/workflows/Dynamic-env.yaml
+++ b/.github/workflows/Dynamic-env.yaml
@@ -20,12 +20,11 @@ jobs:
         echo "JOB_LEVEL_ENV=$RANDOM" >> "$GITHUB_ENV"
      - name: Multiline String
        run: | 
-        DELIMITER=1234
-        echo "RANDOM_JOKE<< $DELIMITER" >> "$GITHUB_ENV"
+        echo "RANDOM_JOKE<<EOF" >> "$GITHUB_ENV"
         echo "Here is a Joke: " >> "$GITHUB_ENV"
         curl -s https://icanhazdadjoke.com/ >> "$GITHUB_ENV"
         echo "" >> "$GITHUB_ENV"
-        echo "$DELIMITER" >> "$GITHUB_ENV"
+        echo "EOF" >> "$GITHUB_ENV"
      - name: Log Custom Env Vars
        env: 
         STEP_LEVEL_ENV: Available to this steps only
