--- a/.github/workflows/matrix.yaml
+++ b/.github/workflows/matrix.yaml
@@ -9,7 +9,18 @@ jobs:
       matrix:
         os: [ubuntu-latest, windows-latest]
         node-version: [13,14,15]
-     # fail-fast: false
+        include:
+          - os: ubuntu-latest # This is going merge with exixting combination//
+            is-ubuntu: true   # Where os key having value ubuntu-lates
+          - os: macos-latest  #This going to be an extra combination \\
+            node-version: 15  # as key is not matching with existing
+          - experimental: false    # This is going to merge with all combination\\
+          - os: ubuntu-latest   #his going to be an extra combination \\
+            node-version: 17    # as key is not matching with existing
+        exclude:
+          - os: ubuntu-latest #exclude the combination where os is ubuntu-latest\\
+            node-version: 14  # and node version is 14
+      fail-fast: false
      # max-parallel: 3  
     runs-on: ${{ matrix.os}} 
     steps:
