--- a/.github/workflows/matrix.yaml
+++ b/.github/workflows/matrix.yaml
@@ -24,6 +24,8 @@ jobs:
      # max-parallel: 3  
     runs-on: ${{ matrix.os}} 
     steps:
+     - if: matrix.experimental == true
+       run: exit 1 
      - run: node -v
      - run: echo ${{ toJSON(matrix) }}
      - uses: actions/setup-node@v3
