--- a/.github/workflows/Dynamic matrix.yaml
+++ b/.github/workflows/Dynamic matrix.yaml
@@ -19,8 +19,7 @@ jobs:
        - uses: actions/github-script@v6
          id: matrix-arrays
          with:
-            scripts: "return {os: context.payload.inputs['os'].split(','), 
-             'node-version':context.payload.inputs['node-version'].split(',') }"
+            scripts: "return {os: context.payload.inputs['os'].split(','),'node-version':context.payload.inputs['node-version'].split(',') }"
             result-encoding: json 
        - run: echo '${{ steps.matrix-arrays.outputs.result }}'     
        - run: echo "step-output=value" >> $GITHUB_OUTPUT
