--- a/.github/workflows/Dynamic matrix.yaml
+++ b/.github/workflows/Dynamic matrix.yaml
@@ -16,10 +16,10 @@ jobs:
   prepare-matrix:
     runs-on: ubuntu-latest
     steps:
-       - uses: actions/github-script@v7
+       - uses: actions/github-script@v6
          id: matrix-arrays
          with:
-            scripts: "return {os: context.payload.inputs['os'].split(','),'node-version':context.payload.inputs['node-version'].split(',') }"
+            script: "return {os: context.payload.inputs['os'].split(','),node-version: context.payload.inputs['node-version'].split(',') }"
             result-encoding: json 
        - run: echo '${{ steps.matrix-arrays.outputs.result }}'     
        - run: echo "step-output=value" >> $GITHUB_OUTPUT
