--- a/.github/workflows/concurrency-1.yaml
+++ b/.github/workflows/concurrency-1.yaml
@@ -5,8 +5,8 @@ on:
     inputs:
         environment:
             description: "Environment"
-            type: environment
-            required: true
+            type: string
+            default: staging
 concurrency: concurrency-1
 jobs:
   sleep:
