--- a/.github/workflows/concurrency-1.yaml
+++ b/.github/workflows/concurrency-1.yaml
@@ -1,4 +1,5 @@
 name: Concurrency 1
+run-name: ${{ inputs.option }}
 
 on:
  workflow_dispatch:
@@ -13,7 +14,7 @@ on:
             - Staging
             - Production
 concurrency: 
-  group: concurrency-1
+  group: ${{ github.event.inputs.option }}
   cancel-in-progress: true
 jobs:
   sleep:
