--- a/.github/workflows/calling-reusable-wf.yaml
+++ b/.github/workflows/calling-reusable-wf.yaml
@@ -9,8 +9,11 @@ on:
         required: false 
 
 jobs:
-  calling-reusable-workflow:
-    uses: navedalisayyed/workflow/.github/workflows/reusable.yaml@main
-    with:
-      name: ${{ inputs.name }}
+  calling-reusable-wf-in-same-repo:
+    uses: ./.github/workflows/reusable-workflow.yaml
+  using-reusable-workflow-output:
+    runs-on: ubuntu-latest
+    needs: calling-reusable-wf-in-same-repo
+    steps:
+      - run: echo ${{ needs.calling-reusable-wf-in-same-repo.outputs.date }}
     
