--- a/.github/workflows/calling-reusable-wf.yaml
+++ b/.github/workflows/calling-reusable-wf.yaml
@@ -15,5 +15,5 @@ jobs:
     runs-on: ubuntu-latest
     needs: calling-reusable-wf-in-same-repo
     steps:
-      - run: echo ${{ needs.calling-reusable-wf-in-same-repo.outputs.date }}
+      - run: echo "This is me"
     
